# golsim

./: .gitignore  gol_simulator.cpp  gol_simulator.hpp  golsim.glade  main.cpp  meson.build
